==> ZettaScaleLabs/zenoh-pico/src/system/mbed/network.cpp <==
#include <NetworkInterface.h>
#include <USBSerial.h>
#include <mbed.h>
#include <netdb.h>
#include <stdbool.h>
#include <stddef.h>
#include <string.h>
#include "zenoh-pico/collections/string.h"
#include "zenoh-pico/config.h"
#include "zenoh-pico/system/link/serial.h"
#include "zenoh-pico/system/platform.h"
#include "zenoh-pico/utils/checksum.h"
#include "zenoh-pico/utils/encoding.h"
#include "zenoh-pico/utils/logging.h"
#include "zenoh-pico/utils/pointers.h"

_z_sys_net_socket_t _z_open_tcp(_z_sys_net_endpoint_t rep, uint32_t tout) {
    _z_sys_net_socket_t sock;
    sock._err = false;

    NetworkInterface *net = NetworkInterface::get_default_instance();

    sock._tcp = new TCPSocket();
    sock._tcp->set_timeout(tout);
    if ((sock._err == false) && (sock._tcp->open(net) < 0)) {
        sock._err = true;
    }

    if ((sock._err == false) && (sock._tcp->connect(*rep._iptcp) < 0)) {
        sock._err = true;
    }

    if (sock._err == true) {
        delete sock._tcp;
    }

    return sock;
}

_z_sys_net_socket_t _z_open_udp_unicast(_z_sys_net_endpoint_t rep, uint32_t tout) {
    _z_sys_net_socket_t sock;
    sock._err = false;
    (void)(rep);

    NetworkInterface *net = NetworkInterface::get_default_instance();

    sock._udp = new UDPSocket();
    sock._udp->set_timeout(tout);
    if ((sock._err == false) && (sock._udp->open(net) < 0)) {
        sock._err = true;
    }

    if (sock._err == true) {
        delete sock._tcp;
    }

    return sock;
}

size_t _z_read_udp_unicast(_z_sys_net_socket_t sock, uint8_t *ptr, size_t len) {
    SocketAddress raddr;
    nsapi_size_or_error_t rb = sock._udp->recvfrom(&raddr, ptr, len);
    if (rb < 0) {
        rb = SIZE_MAX;
    }

    return rb;
}

_z_sys_net_socket_t _z_open_udp_multicast(_z_sys_net_endpoint_t rep, _z_sys_net_endpoint_t *lep, uint32_t tout,
                                          const char *iface) {
    _z_sys_net_socket_t sock;
    sock._err = false;
    (void)(lep);  // Multicast messages are not self-consumed, so no need to save the local address

    NetworkInterface *net = NetworkInterface::get_default_instance();

    sock._udp = new UDPSocket();
    sock._udp->set_timeout(tout);
    if ((sock._err == false) && (sock._udp->open(net) < 0)) {
        sock._err = true;
    }

    if (sock._err == true) {
        delete sock._tcp;
    }

    return sock;
}

_z_sys_net_socket_t _z_listen_udp_multicast(_z_sys_net_endpoint_t rep, uint32_t tout, const char *iface) {
    _z_sys_net_socket_t sock;
    sock._err = false;

    NetworkInterface *net = NetworkInterface::get_default_instance();

    sock._udp = new UDPSocket();
    sock._udp->set_timeout(tout);
    if ((sock._err == false) && (sock._udp->open(net) < 0)) {
        sock._err = true;
    }

    if ((sock._err == false) && (sock._udp->bind(rep._iptcp->get_port()) < 0)) {
        sock._err = true;
    }

    if ((sock._err == false) && (sock._udp->join_multicast_group(*rep._iptcp) < 0)) {
        sock._err = true;
    }

    if (sock._err == true) {
        delete sock._tcp;
    }

    return sock;
}

void _z_close_udp_multicast(_z_sys_net_socket_t sockrecv, _z_sys_net_socket_t socksend, _z_sys_net_endpoint_t rep) {
    // Both sockrecv and socksend must be compared to err,
    //  because we dont know if the close is trigger by a normal close
    //  or some of the sockets failed during the opening/listening procedure.
    if (sockrecv._err == false) {
        sockrecv._udp->leave_multicast_group(*rep._iptcp);
        sockrecv._udp->close();
        delete sockrecv._udp;
    }

    if (socksend._err == false) {
        socksend._udp->close();
        delete socksend._udp;
    }
}

size_t _z_read_udp_multicast(_z_sys_net_socket_t sock, uint8_t *ptr, size_t len, _z_sys_net_endpoint_t lep,
                             _z_bytes_t *addr) {
    SocketAddress raddr;
    nsapi_size_or_error_t rb = 0;

    do {
        rb = sock._udp->recvfrom(&raddr, ptr, len);
        if (rb < 0) {
            rb = SIZE_MAX;
            break;
        }

        if (raddr.get_ip_version() == NSAPI_IPv4) {
            *addr = _z_bytes_make(NSAPI_IPv4_BYTES + sizeof(uint16_t));
            (void)memcpy(const_cast<uint8_t *>(addr->start), raddr.get_ip_bytes(), NSAPI_IPv4_BYTES);
            uint16_t port = raddr.get_port();
            (void)memcpy(const_cast<uint8_t *>(addr->start + NSAPI_IPv4_BYTES), &port, sizeof(uint16_t));
            break;
        } else if (raddr.get_ip_version() == NSAPI_IPv6) {
            *addr = _z_bytes_make(NSAPI_IPv6_BYTES + sizeof(uint16_t));
            (void)memcpy(const_cast<uint8_t *>(addr->start), raddr.get_ip_bytes(), NSAPI_IPv6_BYTES);
            uint16_t port = raddr.get_port();
            (void)memcpy(const_cast<uint8_t *>(addr->start + NSAPI_IPv6_BYTES), &port, sizeof(uint16_t));
            break;
        } else {
            continue;  // FIXME: support error report on invalid packet to the upper layer
        }
    } while (1);

    return rb;
}
